--- a/index.html
+++ b/index.html
@@ -461,7 +461,10 @@
 
 <ul>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 2023.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 2023.
+<ul>
+<li>2023 Runner-up, Harvey J. Greenberg Research Award, INFORMS Computing Society</li>
+</ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> 2023.</p></li>   
  
