--- a/index.html
+++ b/index.html
@@ -502,7 +502,7 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency? An Analysis using Prize-collecting Traveling Salesman Model</a>.&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Under Revision in <em>Management Science.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Management Science.</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
@@ -512,7 +512,7 @@
 </ul></p>
 </li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Review</p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). </p></li>
 
 </ul>
 
