--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 <ul>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=3896973" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Forthcoming in <em>Production and Operations Management.</em> 2024.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Forthcoming in <em>Production and Operations Management.</em> 2024.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 2023.
 <ul>
@@ -469,6 +469,8 @@
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> 2023.</p></li>   
+
+<li><p>&ldquo;<a href="https://doi.org/10.1016/j.trb.2023.102805" target="_blank">Humanitarian transportation network design via two-stage distributionally robust optimization</a>.&rdquo; (with Guowei Zhang, Ning Jia, Ning Zhu and Yossiri Adulyasak). <em>Transportation Research Part B: Methodological.</em> 2023.</p></li>   
  
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management.</em> 31(10), 3771-3787. 2022.</p></li>
 
