--- a/index.html
+++ b/index.html
@@ -461,6 +461,8 @@
 
 <ul>
 
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
+
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Forthcoming in <em>Production and Operations Management.</em> 2024.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 2023.
@@ -506,15 +508,13 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
-
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Revision in <em>Operations Research</em></p></li>
+  
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
 <li>Preliminary version <a href="https://doi.org/10.1145/3580305.3599474" target="_blank">In Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’23)</a>.</li>
 </ul></p>
 </li>
-
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). </p></li>
 
 </ul>
 
