--- a/index.html
+++ b/index.html
@@ -461,7 +461,7 @@
 
 <ul>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4147663" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Wei Qi and Hongcai Zhang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2024.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). Forthcoming in <em>Production and Operations Management.</em> 2024.</p></li>
 
