--- a/index.html
+++ b/index.html
@@ -436,6 +436,8 @@
 
 <ul>
 
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency? An Analysis using Prize-collecting Traveling Salesman Model</a>.&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em>2025.</p></li>
+
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 2024.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 2024.</p></li>
@@ -478,8 +480,6 @@
 <h2 id="working-paper">Working Papers</h2>
 
 <ul>
-
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency? An Analysis using Prize-collecting Traveling Salesman Model</a>.&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Under Revision in <em>Management Science.</em></p></li>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
