--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 <div class="row">
   
   <div class="col-12 col-lg-4 section-heading">
-    <h1>PhD and Postdocs</h1>
+    <h1>PhD & Postdoc Fellows</h1>
     
   </div>
   <div class="col-12 col-lg-8">
@@ -591,7 +591,7 @@
 <li>Ruijiu Mao (expected 2025)</li>
 </ul>
 
-<h2 id="postdocs">Postdocs</h2>
+<h2 id="postdocs">Postdoc Fellows</h2>
 <ul>
 <li>Zhaowei Hao (2018-2020, Associate Professor, Dongbei University of Finance and Economics)</li>
 <li>Bomin Bian (2020-2023, Assistant Professor, Dalian University of Technology)</li>
