--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@
 
 <h2 id="students">PhD Students</h2>
 <ul>
-<li>Sheng Bi (2021, Assistant Professor, Shanghai University of Finance and Economics)</li>
+<li><a href="http://simecv.sufe.edu.cn/page.aspx?id=33" target="_blank">Sheng Bi</a> (2021, Assistant Professor, Shanghai University of Finance and Economics)</li>
 <li>Irfan Soudagar (2021, Development Scientist, A*STAR, Singapore)</li>
 <li>Tu Ni (2023, Postdoctoral Fellow, Harvard Business School)</li>
 <li>Quanmeng Wang (2023, Postdoctoral Fellow, Institute of Operations Research & Analytics, NUS)</li>
