--- a/index.html
+++ b/index.html
@@ -585,7 +585,7 @@
 <h2 id="students">PhD Students</h2>
 <ul>
 <li><a href="http://simecv.sufe.edu.cn/page.aspx?id=33" target="_blank">Sheng Bi</a> (2021, Assistant Professor, Shanghai University of Finance and Economics)</li>
-<li>Irfan Soudagar (2021, Development Scientist, A*STAR, Singapore)</li>
+<li><a href="https://scholar.google.com/citations?user=r5NLSFEAAAAJ&hl=en" target="_blank">Irfan Soudagar</a> (2021, Development Scientist, A*STAR, Singapore)</li>
 <li><a href="https://nitu.mystrikingly.com/" target="_blank">Tu Ni</a> (2023, Postdoc Fellow, Harvard Business School)</li>
 <li><a href="https://iora.nus.edu.sg/people-p/wang-quanmeng/" target="_blank">Quanmeng Wang</a> (2023, Postdoc Fellow, Institute of Operations Research & Analytics, NUS)</li>
 <li><a href="https://sites.google.com/view/ruijiumao" target="_blank">Ruijiu Mao</a> (expected 2025)</li>
