--- a/index.html
+++ b/index.html
@@ -588,14 +588,14 @@
 <li><a href="https://scholar.google.com/citations?user=r5NLSFEAAAAJ&hl=en" target="_blank">Irfan Soudagar</a> (2021, Development Scientist, A*STAR, Singapore)</li>
 <li><a href="https://nitu.mystrikingly.com/" target="_blank">Tu Ni</a> (2023, Postdoc Fellow, Harvard Business School)</li>
 <li><a href="https://iora.nus.edu.sg/people-p/wang-quanmeng/" target="_blank">Quanmeng Wang</a> (2023, Postdoc Fellow, Institute of Operations Research & Analytics, NUS)</li>
-<li><a href="https://sites.google.com/view/ruijiumao" target="_blank">Ruijiu Mao</a> (expected 2025)</li>
+<li><a href="https://sites.google.com/view/ruijiumao" target="_blank">Ruijiu Mao</a> (expected 2025, incoming Assistant Professor, Alberta School of Business, University of Alberta)</li>
 </ul>
 
 <h2 id="postdocs">Postdoc Fellows</h2>
 <ul>
 <li><a href="https://isca.dufe.edu.cn/content_55934.html" target="_blank">Zhaowei Hao</a> (2018-2020, Associate Professor, Dongbei University of Finance and Economics)</li>
 <li><a href="https://faculty.dlut.edu.cn/bmbian/zh_CN/index/1165000/list/index.htm" target="_blank">Bomin Bian</a> (2020-2023, Associate Professor, Dalian University of Technology)</li>
-<li><a href="https://skywalker6174.github.io/" target="_blank">Yue Zhao</a> (2022-2024, Assistant Professor, Peking University HSBC Business School)</li>
+<li><a href="https://skywalker6174.github.io/" target="_blank">Yue Zhao</a> (2022-2024, incoming Assistant Professor, Peking University HSBC Business School)</li>
 </ul>
 
   </div>
