--- a/index.html
+++ b/index.html
@@ -448,18 +448,18 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 2024.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 2024.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 33(8), 1739-1758. 2024.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 2023.
+<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 72(5), 2215-2240. 2023.
 <ul>
 <li>2023 Runner-up, Harvey J. Greenberg Research Award, INFORMS Computing Society</li>
 </ul></p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> 2023.</p></li>   
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> 25(5), 1692-1710. 2023.</p></li>   
 
-<li><p>&ldquo;<a href="https://doi.org/10.1016/j.trb.2023.102805" target="_blank">Humanitarian transportation network design via two-stage distributionally robust optimization</a>.&rdquo; (with Guowei Zhang, Ning Jia, Ning Zhu and Yossiri Adulyasak). <em>Transportation Research Part B: Methodological.</em> 2023.</p></li>   
+<li><p>&ldquo;<a href="https://doi.org/10.1016/j.trb.2023.102805" target="_blank">Humanitarian transportation network design via two-stage distributionally robust optimization</a>.&rdquo; (with Guowei Zhang, Ning Jia, Ning Zhu and Yossiri Adulyasak). <em>Transportation Research Part B: Methodological.</em> 176, 102805. 2023.</p></li>   
  
 <li><p>&ldquo;<a href="https://doi.org/10.1111/poms.13775" target="_blank">Smart Urban Transport and Logistics: A Business Analytics Perspective</a>.&rdquo; (with Sheng Liu and Z. Max Shen). <em>Production and Operations Management.</em> 31(10), 3771-3787. 2022.</p></li>
 
