--- a/index.html
+++ b/index.html
@@ -588,8 +588,8 @@
 <li><a href="http://simecv.sufe.edu.cn/page.aspx?id=33" target="_blank">Sheng Bi</a> (2021, Associate Professor, Shanghai University of Finance and Economics)</li>
 <li><a href="https://scholar.google.com/citations?user=r5NLSFEAAAAJ&hl=en" target="_blank">Irfan Soudagar</a> (2021, Development Scientist, A*STAR, Singapore)</li>
 <li><a href="https://nitu.mystrikingly.com/" target="_blank">Tu Ni</a> (2023, Postdoc Fellow, Harvard Business School)</li>
-<li><a href="https://iora.nus.edu.sg/people-p/wang-quanmeng/" target="_blank">Quanmeng Wang</a> (2023, Postdoc Fellow, Institute of Operations Research & Analytics, NUS)</li>
-<li><a href="https://sites.google.com/view/ruijiumao" target="_blank">Ruijiu Mao</a> (expected 2025, incoming Assistant Professor, Alberta School of Business, University of Alberta)</li>
+<li><a href="https://iora.nus.edu.sg/people-p/wang-quanmeng/" target="_blank">Quanmeng Wang</a> (2023, incoming Assistant Professor, Tongji University)</li>
+<li><a href="https://sites.google.com/view/ruijiumao" target="_blank">Ruijiu Mao</a> (2025, incoming Assistant Professor, Alberta School of Business, University of Alberta)</li>
 </ul>
 
 <h2 id="postdocs">Postdoc Fellows</h2>
