--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
 <h2 id="working-paper">Working Papers</h2>
 
-<ul>
+<ol reversed>
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
@@ -502,7 +502,7 @@
 </ul></p>
 </li>
 
-</ul>
+</ol>
 
 <h2 id="book-chapter">Book Chapter</h2>
 
