--- a/index.html
+++ b/index.html
@@ -444,7 +444,7 @@
   <div class="col-12 col-lg-8">
     <p><h2 id="journal-articles">Journal Articles</h2>
 
-<ul>
+<ol reversed>
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2023.0531" target="_blank">On the Equivalence and Performance of Distributionally Robust Optimization and Robust Satisficing Models</a>.&rdquo; (with Zhiyuan Wang, Lun Ran, and Minglong Zhou). Forthcoming in <em>Manufacturing &amp; Service Operations Management. </em> 2025.</p></li>   
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
@@ -486,7 +486,7 @@
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid.</em> 4.4 (2013) 2296-2308.</p></li>
-</ul>
+</ol>
 
 <h2 id="working-paper">Working Papers</h2>
 
