--- a/index.html
+++ b/index.html
@@ -445,6 +445,8 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ol reversed>
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
+
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2023.0531" target="_blank">On the Equivalence and Performance of Distributionally Robust Optimization and Robust Satisficing Models</a>.&rdquo; (with Zhiyuan Wang, Lun Ran, and Minglong Zhou). Forthcoming in <em>Manufacturing &amp; Service Operations Management. </em> 2025.</p></li>   
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
@@ -492,10 +494,10 @@
 
 <ol reversed>
 
+<li><p>&ldquo;<a>Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Conditional Accept in <em>Production and Operations Management</em></p></li>
+
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Under Revision in <em>Manufacturing &amp; Service Operations Management.</em></p></li>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive Policing: A Resource Allocation Model for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li and Yue Zhao). Under Revision in <em>Operations Research.</em></p></li>
-  
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
 <li>Preliminary version <a href="https://doi.org/10.1145/3580305.3599474" target="_blank">In Proceedings of the 29th ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD ’23)</a>.</li>
