--- a/index.html
+++ b/index.html
@@ -497,7 +497,11 @@
 <li><p>&ldquo;<a>Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Conditional Accept in <em>Production and Operations Management.</em></p></li>
 <li><p>&ldquo;<a>Spatial Flexibility of Autonomous Vehicles in Shared-Mobility</a>.&rdquo; (with Runyu Tang, Yong Liang, and Jeannette Song). Under Revision in <em>Management Science.</em></p></li>
 <li><p>&ldquo;<a>Spatial Competition in Fast-Charging Networks</a>.&rdquo; (with Philipp Artur Kienscherf, Yixin Lu, and Wolfgang Ketter). Under Revision in <em>Information Systems Research.</em></p></li>
-
+<li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
+<ul>
+<li>Finalist of The First INFORMS TSL Data-Driven Research Challenge, 2025</li>
+</ul>
+  
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive policing: Resource Allocation for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li, and Yue Zhao). Under Revision in <em>Operations Research.</em></p></li>
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
