--- a/index.html
+++ b/index.html
@@ -447,6 +447,8 @@
 <ol reversed>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
 
+<li><p>&ldquo;<a>Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Forthcoming in <em>Production and Operations Management.</em></p></li>
+  
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2023.0531" target="_blank">On the Equivalence and Performance of Distributionally Robust Optimization and Robust Satisficing Models</a>.&rdquo; (with Zhiyuan Wang, Lun Ran, and Minglong Zhou). Forthcoming in <em>Manufacturing &amp; Service Operations Management. </em> 2025.</p></li>   
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
@@ -494,7 +496,6 @@
 
 <ol reversed>
   
-<li><p>&ldquo;<a>Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Conditional Accept in <em>Production and Operations Management.</em></p></li>
 <li><p>&ldquo;<a>Spatial Flexibility of Autonomous Vehicles in Shared-Mobility</a>.&rdquo; (with Runyu Tang, Yong Liang, and Jeannette Song). Under Revision in <em>Management Science.</em></p></li>
 <li><p>&ldquo;<a>Spatial Competition in Fast-Charging Networks</a>.&rdquo; (with Philipp Artur Kienscherf, Yixin Lu, and Wolfgang Ketter). Under Revision in <em>Information Systems Research.</em></p></li>
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
