--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research involves using optimization and machine learning tools to address problems in Smart City Operations (e.g., shared mobility, electric vehicles, and last-mile delivery), Sustainable Energy Ecosystem, and Supply Chain Management. This line of research has been recognized with the M&amp;SOM Journal Best Paper Award, Transportation Science &amp; Logistics (TSL) Best Paper Award, and ENRE Best Publication Award in Energy from INFORMS.</p>
+<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research combines data-driven optimization and machine learning to address practical problems in smart city operations (e.g., shared mobility, last-mile delivery, and urban policing), sustainable energy systems (e.g., EV charging, battery swapping, green hydrogen) and supply chain management (e.g., network design, capacity planning, and logistics). This line of research has been recognized with the M&SOM Journal Best Paper Award, Transportation Science & Logistics (TSL) Best Paper Award, and ENRE Best Publication Awards from INFORMS.</p>
 
 
     <div class="row">
@@ -453,7 +453,10 @@
 
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
 
-<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.
+<ul>
+<li>2025 ENRE Best Publication Award in Natural Resources, INFORMS</li>
+</ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 33(8), 1739-1758. 2024.</p></li>
 
