--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
   
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2023.0531" target="_blank">On the Equivalence and Performance of Distributionally Robust Optimization and Robust Satisficing Models</a>.&rdquo; (with Zhiyuan Wang, Lun Ran, and Minglong Zhou). Forthcoming in <em>Manufacturing &amp; Service Operations Management. </em> 2025.</p></li>   
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4273960" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/mnsc.2024.04567" target="_blank">Does Locker Alliance Network Improve Last Mile Delivery Efficiency?</a>&rdquo; (with Quanmeng Wang, Guodong Lyu and Chung-Piaw Teo). Forthcoming in <em>Management Science.</em> 2025.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.
 <ul>
