--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 <ol reversed>
 <li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
 
-<li><p>&ldquo;<a>Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Forthcoming in <em>Production and Operations Management.</em> 2025.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1177/10591478251375297" target="_blank">Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Forthcoming in <em>Production and Operations Management.</em> 2025.</p></li>
   
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/abs/10.1287/msom.2023.0531" target="_blank">On the Equivalence and Performance of Distributionally Robust Optimization and Robust Satisficing Models</a>.&rdquo; (with Zhiyuan Wang, Lun Ran, and Minglong Zhou). Forthcoming in <em>Manufacturing &amp; Service Operations Management. </em> 2025.</p></li>   
 
