--- a/index.html
+++ b/index.html
@@ -513,6 +513,13 @@
   
 <li><p>&ldquo;<a>Spatial Flexibility of Autonomous Vehicles in Shared-Mobility</a>.&rdquo; (with Runyu Tang, Yong Liang, and Jeannette Song). Under Revision in <em>Management Science.</em></p></li>
 <li><p>&ldquo;<a>Spatial Competition in Fast-Charging Networks</a>.&rdquo; (with Philipp Artur Kienscherf, Yixin Lu, and Wolfgang Ketter). Under Revision in <em>Information Systems Research.</em></p></li>
+
+<li><p>&ldquo;<a>Rebalancing and Clearance Pricing of Near-Expiry Inventory in Online Grocery Retail</a>.&rdquo; (with Zhengling Qi, Ziyuan Zhou, Guangrui Ma, Yuanbo Peng, Yushu Yao, Zhongyi Zha, Mingyong Zhao, and Zhenyu Zhuo). <em></em></p></li>
+<ul>
+<li>Finalist of Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</li>
+<li>Accepted at NeurIPS 2025 Workshop MLxOR</li>
+</ul>
+
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
 <ul>
 <li>Finalist of The First INFORMS TSL Data-Driven Research Challenge, 2025</li>
