--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
 <li><p>&ldquo;<a>Rebalancing and Clearance Pricing of Near-Expiry Inventory in Online Grocery Retail</a>.&rdquo; (with Zhengling Qi, Ziyuan Zhou, Guangrui Ma, Yuanbo Peng, Yushu Yao, Zhongyi Zha, Mingyong Zhao, and Zhenyu Zhuo). <em></em></p></li>
 <ul>
 <li>Finalist of Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</li>
-<li>Accepted at NeurIPS 2025 Workshop ML x OR: Mathematical Foundations and Operational Integration of Machine Learning for Uncertainty-Aware Decision-Making</li>
+<li>Accepted at NeurIPS 2025 MLxOR Workshop: Mathematical Foundations and Operational Integration of Machine Learning for Uncertainty-Aware Decision-Making</li>
 </ul>
 
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
