--- a/index.html
+++ b/index.html
@@ -457,7 +457,10 @@
     <p><h2 id="journal-articles">Journal Articles</h2>
 
 <ol reversed>
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4060541" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
+
+<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive policing: Resource Allocation for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li, and Yue Zhao). Forthcoming in <em>Operations Research.</em> 2025.</p></li>
+  
+<li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/10.1287/msom.2023.0670" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478251375297" target="_blank">Spatial-Data-Driven Facility Location Planning</a>.&rdquo; (with Irfan Soudagar and Yuli Zhang). Forthcoming in <em>Production and Operations Management.</em> 2025.</p></li>
   
@@ -524,8 +527,6 @@
 <ul>
 <li>Finalist of The First INFORMS TSL Data-Driven Research Challenge, 2025</li>
 </ul>
-  
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive policing: Resource Allocation for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li, and Yue Zhao). Under Revision in <em>Operations Research.</em></p></li>
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
 <ul>
