--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
 
 <h1 id="home">Home</h1>
 
-<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research combines data-driven optimization and ML/AI to address practical problems in smart city operations (e.g., shared mobility, last-mile delivery, and urban policing), sustainable energy systems (e.g., EV charging, battery swapping, green hydrogen) and supply chain management (e.g., network design, capacity planning, and logistics). This line of research has been recognized with the M&SOM Journal Best Paper Award, Transportation Science & Logistics (TSL) Best Paper Award, and the Energy, Natural Resources, and the Environment (ENRE) Best Publication Awards from INFORMS.</p>
+<p>I am an Associate Professor of Decision Sciences at the School of Business, The George Washington University. Prior to joining GWU, I was an Associate Professor in the Department of Analytics &amp; Operations at NUS Business School, National University of Singapore. I received my Ph.D. in Operations Research from University of California, Berkeley and B.Eng. in Logistics Management and Engineering from The Hong Kong University of Science and Technology. My current research combines data-driven optimization and ML/AI to address practical problems in smart city operations (e.g., shared mobility, last-mile delivery, and urban policing), sustainable energy systems (e.g., EV charging, battery swapping, green hydrogen) and supply chain management (e.g., network design, capacity planning, and logistics). This line of research has been recognized with the M&SOM Journal Best Paper Award, Transportation Science & Logistics (TSL) Best Paper Award, and the Energy, Natural Resources, and the Environment (ENRE) Best Publication Awards, and the Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research from INFORMS.</p>
 
 
     <div class="row">
@@ -519,7 +519,7 @@
 
 <li><p>&ldquo;<a>Rebalancing and Clearance Pricing of Near-Expiry Inventory in Online Grocery Retail</a>.&rdquo; (with Zhengling Qi, Ziyuan Zhou, Guangrui Ma, Yuanbo Peng, Yushu Yao, Zhongyi Zha, Mingyong Zhao, and Zhenyu Zhuo). <em></em></p></li>
 <ul>
-<li>Finalist of Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</li>
+<li>Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</li>
 <li>Accepted at NeurIPS 2025 MLxOR Workshop</li>
 </ul>
 
