--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
 
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
 <ul>
-<li>Finalist of The First INFORMS TSL Data-Driven Research Challenge, 2025</li>
+<li>Runner-Up in the First INFORMS TSL Data-Driven Research Challenge, 2025</li>
 </ul>
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
