--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.
 <ul>
-<li>2025 ENRE Best Publication Award in Natural Resources, INFORMS</li>
+<li><span style="color:#228B22; font-weight:bold;">2025 ENRE Best Publication Award in Natural Resources, INFORMS</span></li>
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 33(8), 1739-1758. 2024.</p></li>
