--- a/index.html
+++ b/index.html
@@ -470,14 +470,14 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2022.0381" target="_blank">From Curtailed Renewable Energy to Green Hydrogen: Infrastructure Planning for Hydrogen Fuel-Cell Vehicles</a>.&rdquo; (with Nan Ke, Ruijiu Mao, Wei Qi and Hongcai Zhang). <em>Manufacturing &amp; Service Operations Management.</em> 26(5), 1750-1767. 2024.
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">2025 ENRE Best Publication Award in Natural Resources, INFORMS</span></li>
+<li><span style="color:#B22222; font-weight:bold;">ENRE Best Publication Award in Natural Resources, INFORMS, 2025</span></li>
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1177/10591478241256383" target="_blank">Crowd-starting a Shared (Shuttle) Service with Customer Suggestions</a>.&rdquo; (with Tu Ni). <em>Production and Operations Management.</em> 33(8), 1739-1758. 2024.</p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.2460" target="_blank">An Exponential Cone Programming Approach for Managing Electric Vehicle Charging</a>.&rdquo; (with Li Chen and Yangfang Zhou). <em>Operations Research.</em> 72(5), 2215-2240. 2023.
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">2023 Runner-up, Harvey J. Greenberg Research Award, INFORMS Computing Society</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Runner-up, Harvey J. Greenberg Research Award, INFORMS Computing Society, 2023</span></li>
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2023.1217" target="_blank">Taming the Long Tail of Inventory: The Gambler&rsquo;s Fallacy in Intermittent Demand Management</a>.&rdquo; (with Sheng Bi and Chung-Piaw Teo). <em>Manufacturing &amp; Service Operations Management.</em> 25(5), 1692-1710. 2023.</p></li>   
@@ -490,7 +490,7 @@
 
 <li><p>&ldquo;<a href="https://doi.org/10.1287/msom.2019.0851" target="_blank">Charging an Electric Vehicle-Sharing Fleet</a>.&rdquo; (with Guangrui Ma, Wei Qi, and Xin Wang). <em>Manufacturing &amp; Service Operations Management.</em> 23(2), 471-487. 2021.
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">2022 ENRE Best Publication Award in Energy, INFORMS</span></li>
+<li><span style="color:#B22222; font-weight:bold;">ENRE Best Publication Award in Energy, INFORMS, 2022</span></li>
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://doi.org/10.1002/nav.21945" target="_blank">Spatial pricing and product allocation in online retailing</a>.&rdquo; (with Mengying Xue). <em>Naval Research Logistics (NRL).</em> 67(8), 670-684. 2020.</p></li>
@@ -503,8 +503,8 @@
 
 <li><p>&ldquo;<a href="http://dx.doi.org/10.1287/msom.2016.0611" target="_blank">Service Region Design for Urban Electric Vehicle Sharing Systems</a>.&rdquo; (with Ho-Yin Mak, Ying Rong, and Z. Max Shen). <em>Manufacturing &amp; Service Operations Management.</em> 19(2), 309–327. 2017. [<a href="https://www.informs.org/Blogs/M-SOM-Blogs/M-SOM-Review/Start-Your-Engine-Data-driven-Planning-for-Car-Sharing-Systems-for-Smart-Cities" target="_blank">M&amp;SOM Review Blog</a>]
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">2019 M&amp;SOM Journal Best Paper Award, INFORMS</span></li>
-<li><span style="color:#1E90FF; font-weight:bold;">2019 Transportation Science &amp; Logistics (TSL) Best Paper Award, INFORMS</span></li>
+<li><span style="color:#B22222; font-weight:bold;">M&amp;SOM Journal Best Paper Award, INFORMS, 2019</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Transportation Science &amp; Logistics (TSL) Best Paper Award, INFORMS, 2019</span></li>
 </ul></p></li>
 
 <li><p>&ldquo;<a href="https://ieeexplore.ieee.org/document/6558842" target="_blank">Stochastic Control for Smart Grid Users with Flexible Demand</a>.&rdquo; (with Yong Liang, Xinyu Cao, and Z. Max Shen). <em>IEEE Transactions on Smart Grid.</em> 4.4 (2013) 2296-2308.</p></li>
@@ -519,13 +519,13 @@
 
 <li><p>&ldquo;<a>Rebalancing and Clearance Pricing of Near-Expiry Inventory in Online Grocery Retail</a>.&rdquo; (with Zhengling Qi, Ziyuan Zhou, Guangrui Ma, Yuanbo Peng, Yushu Yao, Zhongyi Zha, Mingyong Zhao, and Zhenyu Zhuo). <em></em></p></li>
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</span></li>
-<li><span style="color:#1E90FF; font-weight:bold;">Accepted at NeurIPS 2025 MLxOR Workshop</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Daniel H. Wagner Prize for Excellence in the Practice of Advanced Analytics and Operations Research, INFORMS, 2025</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Accepted at NeurIPS 2025 MLxOR Workshop</span></li>
 </ul>
 
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
 <ul>
-<li><span style="color:#1E90FF; font-weight:bold;">Runner-Up in the First INFORMS TSL Data-Driven Research Challenge, 2025</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Runner-Up in the First INFORMS TSL Data-Driven Research Challenge, 2025</span></li>
 </ul>
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
