--- a/index.html
+++ b/index.html
@@ -516,6 +516,7 @@
   
 <li><p>&ldquo;<a>Spatial Flexibility of Autonomous Vehicles in Shared-Mobility</a>.&rdquo; (with Runyu Tang, Yong Liang, and Jeannette Song). Under Revision in <em>Management Science.</em></p></li>
 <li><p>&ldquo;<a>Spatial Competition in Fast-Charging Networks</a>.&rdquo; (with Philipp Artur Kienscherf, Yixin Lu, and Wolfgang Ketter). Under Revision in <em>Information Systems Research.</em></p></li>
+<li><p>&ldquo;<a>The Role and Optimization of Staff Picks in Crowdfunding</a>.&rdquo; (with Ting Hou, Jussi Keppo, and Xihan Guo). Under Revision in <em>Manufacturing & Service Operations Management.</em></p></li>
 
 <li><p>&ldquo;<a>Rebalancing and Clearance Pricing of Near-Expiry Inventory in Online Grocery Retail</a>.&rdquo; (with Zhengling Qi, Ziyuan Zhou, Guangrui Ma, Yuanbo Peng, Yushu Yao, Zhongyi Zha, Mingyong Zhao, and Zhenyu Zhuo). <em></em></p></li>
 <ul>
