--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 
 <li><p>&ldquo;<a>Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
 <ul>
-<li><span style="color:#B22222; font-weight:bold;">Runner-Up in the First INFORMS TSL Data-Driven Research Challenge, 2025</span></li>
+<li><span style="color:#B22222; font-weight:bold;">Runner-Up, the First INFORMS TSL Data-Driven Research Challenge, 2025</span></li>
 </ul>
 
 <li><p>&ldquo;<a href="https://arxiv.org/abs/2306.02223" target="_blank">Prescriptive PCA: Dimensionality Reduction for Two-stage Stochastic Optimization</a>.&rdquo; (with Ho-Yin Mak). 
