--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
 
 <ol reversed>
 
-<li><p>&ldquo;<a href="https://ssrn.com/abstract=4526158" target="_blank">Proactive policing: Resource Allocation for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li, and Yue Zhao). Forthcoming in <em>Operations Research.</em> 2025.</p></li>
+<li><p>&ldquo;<a href="https://doi.org/10.1287/opre.2023.0415" target="_blank">Proactive policing: Resource Allocation for Crime Prevention with Deterrence Effect</a>.&rdquo; (with Xiaobo Li, and Yue Zhao). Forthcoming in <em>Operations Research.</em> 2025.</p></li>
   
 <li><p>&ldquo;<a href="https://pubsonline.informs.org/doi/10.1287/msom.2023.0670" target="_blank">Robust Capacity Planning with General Upgrading</a>.&rdquo; (with Zhaowei Hao, Zhenyu Hu and Jun Jiang). Forthcoming in <em>Manufacturing &amp; Service Operations Management.</em> 2025.</p></li>
 
