--- a/index.html
+++ b/index.html
@@ -524,7 +524,7 @@
 <li><span style="color:#B22222; font-weight:bold;">Accepted at NeurIPS 2025 MLxOR Workshop</span></li>
 </ul>
 
-<li><p>&ldquo;<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5839702" target="_blank">Dispatch or Hold? An Offline Learning and Online Optimization Approach for On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
+<li><p>&ldquo;<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=5839702" target="_blank">Dispatch or Hold? An Inverse Optimization and Reinforcement Learning Approach for Multi-Objective On-Demand Delivery</a>.&rdquo; (with Yihua Wang, Zhengling Qi, and Stefan Minner). Under Revision in <em>Transportation Science.</em></p></li>
 <ul>
 <li><span style="color:#B22222; font-weight:bold;">Runner-Up, the First INFORMS TSL Data-Driven Research Challenge, 2025</span></li>
 </ul>
